// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="span"
  style={Object {}}
>
  <div>
    content
  </div>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="span"
  style={Object {}}
>
  <div>
    content 1
  </div>
  <div>
    content 2
  </div>
  <div>
    content 3
  </div>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;
